@@ -23,14 +23,14 @@
 
 /**
  * @test
- * @compile -addmods java.transaction
+ * @compile --add-modules=java.transaction
  *   test/transaction/InvalidTransactionExceptionTests.java
  *   test/transaction/TransactionRequiredExceptionTests.java
  *   test/transaction/TransactionRolledbackExceptionTests.java
  *   test/transaction/XAExceptionTests.java
  *   util/SerializedTransactionExceptions.java
- * @run testng/othervm -addmods java.transaction test.transaction.InvalidTransactionExceptionTests
- * @run testng/othervm -addmods java.transaction test.transaction.TransactionRequiredExceptionTests
- * @run testng/othervm -addmods java.transaction test.transaction.TransactionRolledbackExceptionTests
- * @run testng/othervm -addmods java.transaction util.SerializedTransactionExceptions
+ * @run testng/othervm --add-modules=java.transaction test.transaction.InvalidTransactionExceptionTests
+ * @run testng/othervm --add-modules=java.transaction test.transaction.TransactionRequiredExceptionTests
+ * @run testng/othervm --add-modules=java.transaction test.transaction.TransactionRolledbackExceptionTests
+ * @run testng/othervm --add-modules=java.transaction util.SerializedTransactionExceptions
  */
